@@ -1,3 +1,4 @@
 export * from "./parsers/AsciidocChangelogParser"
+export * from "./serializers/AsciidocChangelogSerializer"
 export * from "./Changelog"
 export * from "./PromoteChangelog"
